--- a/src/styles/client/navbar/style.scss
+++ b/src/styles/client/navbar/style.scss
@@ -8,7 +8,7 @@
         width: 100%;
         z-index: 99;
         padding: 20px 0px;
-        background: #fff;
+        // background: #fff;
         transition: 0.4s all;
 
         .logo {
