--- a/src/styles/client/navbar/style.scss
+++ b/src/styles/client/navbar/style.scss
@@ -8,18 +8,8 @@
         width: 100%;
         z-index: 99;
         padding: 20px 0px;
-        // background: #fff;
         transition: 0.4s all;
-
-        .logo {
-            img {
-                max-height: 40px;
-
-                @media (min-width: 992px) {
-                    max-height: 50px;
-                }
-            }
-        }
+        background: #0b144800;
 
         .bars {
             padding: 5px;
@@ -84,6 +74,8 @@
                 @media (min-width: 992px) {
                     .is-Active {
                         color: $primary;
+                        background: #fff;
+                        border-radius: 3px;
                     }
 
                     ul {
@@ -97,10 +89,10 @@
                             display: inline-block;
 
                             a {
-                                color: #000;
+                                color: #fff;
                                 font-size: 14px;
                                 font-weight: 500;
-                                padding: 5px 10px;
+                                padding: 5px 15px;
                                 transition: 0.4s all;
                                 text-decoration: none;
                                 text-transform: uppercase;
@@ -127,5 +119,9 @@
         @media (min-width: 992px) {
             padding: 25px 0px;
         }
+    }
+
+    .scrolled {
+        background: #0b1448;
     }
 }
