Work in publications page

--- a/src/styles/client/component/navbar/style.scss
+++ b/src/styles/client/component/navbar/style.scss
@@ -1,4 +1,4 @@
-@import "../../../App.scss";
+@import "../../../../App.scss";
 
 .custom-navbar {
     .main-navbar {
@@ -122,6 +122,7 @@
     }
 
     .scrolled {
+        background: #0b1448;
         background: #0b1448;
     }
 }
