--- a/src/styles/client/home/style.scss
+++ b/src/styles/client/home/style.scss
@@ -17,7 +17,7 @@
             font-weight: 600;
             margin-bottom: 0;
             text-transform: capitalize;
-            font-family: 'Kanit', sans-serif;
+            font-family: "Kanit", sans-serif;
 
             @media (min-width: 768px) {
                 font-size: 65px;
@@ -45,7 +45,7 @@
                     font-weight: 500;
                     margin-bottom: 0;
                     text-transform: capitalize;
-                    font-family: 'Kanit', sans-serif;
+                    font-family: "Kanit", sans-serif;
 
                     @media (max-width: 992px) {
                         font-size: 17px;
@@ -71,7 +71,7 @@
 
         h1 {
             color: #343a40;
-            font-family: 'Vidaloka', serif;
+            font-family: "Vidaloka", serif;
         }
 
         p {
@@ -81,7 +81,7 @@
             line-height: 1.8rem;
             text-align: justify;
             text-justify: inter-word;
-            font-family: 'Kanit', sans-serif;
+            font-family: "Kanit", sans-serif;
             color: rgba(102, 101, 101, 0.849);
         }
     }
