--- a/src/styles/client/component/navbar/style.scss
+++ b/src/styles/client/component/navbar/style.scss
@@ -31,78 +31,101 @@
                 transition: opacity 0.4s;
                 background: rgba(0, 0, 0, 0.548);
             }
+        }
 
-            .my-menu {
-                // Side Menu in mobile
-                @media (max-width: 992px) {
-                    position: absolute;
-                    left: -100%;
-                    width: 250px;
-                    height: 100vh;
-                    z-index: 999;
-                    background: #fff;
-                    transition: 0.4s all;
+        .my-menu {
+            // Side Menu in mobile
+            @media (max-width: 992px) {
+                position: fixed;
+                top: 0;
+                left: -100%;
+                width: 250px;
+                height: 100vh;
+                z-index: 999;
+                background: #fff;
+                transition: 0.4s all;
 
-                    .is-Active {
-                        color: #fff;
-                        background: $primary;
-                    }
+                .is-Active {
+                    color: #fff;
+                    background: $primary;
+                }
 
-                    ul {
-                        padding: 15px;
-                        margin-bottom: 0;
+                ul {
+                    padding: 15px;
+                    margin-bottom: 0;
 
-                        li {
-                            list-style: none;
+                    li {
+                        list-style: none;
 
-                            a {
-                                color: #000;
-                                font-size: 14px;
-                                font-weight: 500;
-                                display: block;
-                                padding: 5px 10px;
-                                transition: 0.4s all;
-                                text-decoration: none;
-                                text-transform: capitalize;
-                                font-family: 'Montserrat', sans-serif;
-                            }
+                        a,
+                        .btn {
+                            color: #000;
+                            font-size: 14px;
+                            font-weight: 500;
+                            display: block;
+                            padding: 5px 10px;
+                            transition: 0.4s all;
+                            text-decoration: none;
+                            text-transform: capitalize;
+                            font-family: "Montserrat", sans-serif;
                         }
                     }
                 }
+            }
 
-                // Desktop Menu
-                @media (min-width: 992px) {
-                    .is-Active {
-                        color: $primary;
-                        background: #fff;
-                        border-radius: 3px;
-                    }
+            // Desktop Menu
+            @media (min-width: 992px) {
+                .is-Active {
+                    color: $primary;
+                    background: #fff;
+                    border-radius: 3px;
+                }
 
-                    ul {
-                        padding: 0;
-                        margin-top: 5px;
-                        margin-bottom: 0;
+                ul {
+                    padding: 0;
+                    margin-top: 5px;
+                    margin-bottom: 0;
 
-                        li {
-                            list-style: none;
-                            margin-left: 15px;
-                            display: inline-block;
+                    li {
+                        list-style: none;
+                        margin-left: 15px;
+                        display: inline-block;
 
-                            a, .btn {
-                                color: #fff;
-                                font-size: 14px;
-                                font-weight: 500;
-                                padding: 5px 15px;
-                                transition: 0.4s all;
-                                text-decoration: none;
-                                text-transform: uppercase;
-                                font-family: 'Montserrat', sans-serif;
-                            }
+                        a,
+                        .btn {
+                            color: #fff;
+                            font-size: 14px;
+                            font-weight: 500;
+                            padding: 5px 15px;
+                            transition: 0.4s all;
+                            text-decoration: none;
+                            text-transform: uppercase;
+                            font-family: "Montserrat", sans-serif;
                         }
 
                         .custom-dropdown {
-                            position: relative;
+                            .custom-dropdown-menu {
+                                padding: 10px !important;
+
+                                .dropdown-item {
+                                    font-size: 14px;
+                                    text-transform: capitalize;
+                                    color: #000 !important;
+                                    text-align: left;
+                                    padding: 5px 0px 5px 8px;
+                                }
+
+                                .dropdown-item:hover {
+                                    color: $primary !important;
+                                    background: #dfdfdf;
+                                    border-radius: 4px;
+                                }
+                            }
                         }
+                    }
+
+                    .custom-dropdown {
+                        position: relative;
                     }
                 }
             }
