--- a/src/styles/client/publication/style.scss
+++ b/src/styles/client/publication/style.scss
@@ -12,22 +12,37 @@
     }
 
     .item {
-        cursor: pointer;
-        padding: 15px 0px;
         border-bottom: 1px solid #dfdfdf;
-        p {
-            letter-spacing: 1px;
-            font-size: 16px;
-            font-weight: 200;
-            line-height: 1.5rem;
-            font-family: "Kanit", sans-serif;
-            color: #dc3545 !important;
-            transition: 0.3s all;
-        }
-    }
+        .item-header {
+            cursor: pointer;
+            padding: 15px 0px;
 
-    .item:hover p {
-        color: #fa3e51 !important;
+            p {
+                letter-spacing: 1px;
+                font-size: 16px;
+                font-weight: 200;
+                line-height: 1.5rem;
+                font-family: "Kanit", sans-serif;
+                color: #dc3545 !important;
+                transition: 0.3s all;
+            }
+        }
+
+        .item-header:hover p {
+            color: #fa3e51 !important;
+        }
+
+        .item-body {
+            padding: 0px 20px 10px 30px;
+            p {
+                letter-spacing: 1px;
+                font-size: 14px;
+                font-weight: 200;
+                line-height: 1.5rem;
+                margin-bottom: 0;
+                font-family: "Kanit", sans-serif;
+            }
+        }
     }
 
     @media (min-width: 992px) {
