--- a/src/styles/admin/master.scss
+++ b/src/styles/admin/master.scss
@@ -99,7 +99,7 @@
             h5 {
                 margin-bottom: 0;
                 font-weight: 600;
-                font-family: "Roboto", sans-serif;
+                font-family: 'Roboto', sans-serif;
             }
 
             .btn {
